refactor: move transaction creation into operations